Added record and sealed example